--- a/.dockerignore
+++ b/.dockerignore
@@ -17,7 +17,7 @@
 **/bin
 **/charts
 **/docker-compose*
-**/compose.y*ml
+**/compose*
 **/Dockerfile*
 **/node_modules
 **/npm-debug.log
@@ -29,3 +29,4 @@ README.md
 **/logs
 **/*.VS*
 config.example.yaml
+**/docker*
