Update Dockerfile to be compatible with Home Assistant

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,25 +7,13 @@ ENV PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
-ARG UID=10001
-RUN adduser \
-  --disabled-password \
-  --gecos "" \
-  --home "/nonexistent" \
-  --shell "/sbin/nologin" \
-  --no-create-home \
-  --uid "${UID}" \
-  appuser
-
 RUN --mount=type=cache,target=/root/.cache/pip \
   --mount=type=bind,source=requirements.txt,target=requirements.txt \
   python -m pip install -r requirements.txt
 
-RUN mkdir -p /app/logs && chown appuser:appuser /app/logs
+RUN mkdir -p /app/log
 
-RUN mkdir -p /config && chown appuser:appuser /config
-
-USER appuser
+RUN mkdir -p /config
 
 COPY . .
 
