--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 aiohttp==3.9.5
+aiomqtt==2.3.0
 aiosignal==1.3.1
 attrs==23.2.0
 frozenlist==1.4.1
 idna==3.7
 multidict==6.0.5
+packaging==24.1
+paho-mqtt==2.1.0
 PyYAML==6.0.1
 yarl==1.9.4
